# A12-Compilers

code/: CMakeLists.txt  Compilers.c  Compilers.h  MainReader.c  Reader.c  Reader.h
input/: A12-port  A12-port.sh  A12.bat  INPUT1_Hello.mx  INPUT2_Volume.mx  INPUT3_Factorial.mx  INPUT4_Datatypes.mx  INPUT5_General.mx  INPUT6_Big.mx  README.txt
